--- a/package.json
+++ b/package.json
@@ -9,9 +9,25 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@mui/icons-material": "^7.3.7",
+    "@mui/x-date-pickers": "^8.25.0",
+    "axios": "^1.13.2",
+    "bcryptjs": "^3.0.3",
+    "dayjs": "^1.11.19",
+    "formidable": "^3.5.4",
+    "fs": "^0.0.1-security",
+    "jsonwebtoken": "^9.0.3",
+    "mongoose": "^9.1.4",
     "next": "16.1.3",
     "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "react-data-table-component": "^7.7.0",
+    "react-dom": "19.2.3",
+    "react-dropzone": "^14.3.8",
+    "react-hook-form": "^7.71.1",
+    "react-hot-toast": "^2.6.0",
+    "swiper": "^12.0.3"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
