--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,7 +28,9 @@
     "**/*.tsx",
     ".next/types/**/*.ts",
     ".next/dev/types/**/*.ts",
-    "**/*.mts"
+    "**/*.mts",
+    "app/admin/facilities/[id]/page.jsx",
+    "app/admin/facilities/page.jsx"
   ],
   "exclude": ["node_modules"]
 }
