--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^7.3.7",
     "@mui/x-date-pickers": "^8.25.0",
+    "@pinata/sdk": "^2.1.0",
     "axios": "^1.13.2",
     "bcryptjs": "^3.0.3",
     "dayjs": "^1.11.19",
@@ -21,6 +22,7 @@
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.1.4",
     "next": "16.1.3",
+    "pinata": "^2.5.3",
     "react": "19.2.3",
     "react-data-table-component": "^7.7.0",
     "react-dom": "19.2.3",
