--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "formidable": "^3.5.4",
     "fs": "^0.0.1-security",
     "jsonwebtoken": "^9.0.3",
+    "moment": "^2.30.1",
     "mongoose": "^9.1.4",
     "next": "16.1.3",
     "pinata": "^2.5.3",
     "react": "19.2.3",
+    "react-big-calendar": "^1.19.4",
     "react-data-table-component": "^7.7.0",
     "react-dom": "19.2.3",
     "react-dropzone": "^14.3.8",
